--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,27 @@
 body {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: flex-start;
     font-family: Arial, sans-serif;
+    margin-top: 40px;
 }
 
-#colorPicker {
+#container {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+}
+
+#toolbox {
+    display: flex;
+    flex-direction: column;
+    margin-right: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 14px;
+}
+
+#colorPicker, #brightnessControl {
     margin-bottom: 10px;
 }
 
@@ -13,21 +29,30 @@ body {
     border: 1px solid black;
     background-color: #ffffff;
     cursor: crosshair;
+    margin-top: 10px;
 }
 
 #saveBtn {
     margin-top: 10px;
+    margin-left: 20px;
 }
 
 #controls {
     margin-bottom: 10px;
+    margin-top: 10px;
+    
+
 }
 
 #controls button {
     margin: 0 5px;
+    margin-bottom: 10px;
+    
 }
 
 #brightness {
     width: 100px;
     vertical-align: middle;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
